--- a/YzgMap/YzgMap.csproj
+++ b/YzgMap/YzgMap.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Core\Cartographic3.cs" />
     <Compile Include="Core\CoordinateType.cs" />
     <Compile Include="Core\Ellipsoid.cs" />
+    <Compile Include="Core\YzgMath.cs" />
+    <Compile Include="Service\Cartesian3Service.cs" />
+    <Compile Include="Service\Cartographic3Service.cs" />
     <Compile Include="Service\TransformationService.cs" />
     <Compile Include="Transformation\AngleTransformation.cs" />
     <Compile Include="Transformation\CartographicCartesianTransformation.cs" />
